<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/govImage"
        android:layout_width="409dp"
        android:layout_height="409dp"
        android:layout_marginTop="52dp"
        android:adjustViewBounds="false"
        android:contentDescription="@string/government_image_content_description"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/gov" />

    <ImageView
        android:id="@+id/topBar"
        android:layout_width="414dp"
        android:layout_height="60dp"
        android:contentDescription="@string/top_bar_content_description"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@color/colorPrimary" />

    <TextView
        android:id="@+id/topBarString"
        android:layout_width="200dp"
        android:layout_height="80dp"
        android:layout_marginStart="107dp"
        android:fontFamily="@font/pt_serif_bold"
        android:text="@string/represent_string"
        android:textAlignment="center"
        android:textColor="@android:color/background_light"
        android:textScaleX="1"
        android:textSize="36sp"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/zipcodeButton"
        android:layout_width="414dp"
        android:layout_height="80dp"
        android:layout_marginBottom="160dp"
        android:layout_marginTop="8dp"
        android:background="#bf0a30"
        android:fontFamily="@font/pt_serif_bold"
        android:text="@string/zipcodeString"
        android:textColor="@android:color/background_light"
        android:textSize="30sp"
        android:visibility="visible"
        android:onClick="sendMessage"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/topBar"
        app:layout_constraintVertical_bias="1.0" />

    <Button
        android:id="@+id/currentLocationButton"
        android:layout_width="414dp"
        android:layout_height="80dp"
        android:layout_marginBottom="80dp"
        android:background="#b43757"
        android:fontFamily="@font/pt_serif_bold"
        android:onClick="sendCurrentMessage"
        android:text="@string/currentLocationString"
        android:textColor="@android:color/background_light"
        android:textSize="30sp"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/randomButton"
        android:layout_width="414dp"
        android:layout_height="80dp"
        android:background="#ea3c53"
        android:fontFamily="@font/pt_serif_bold"
        android:onClick="sendRandomMessage"
        android:text="@string/randomLocationString"
        android:textColor="@android:color/background_light"
        android:textSize="30sp"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/currentLocationButton" />

</android.support.constraint.ConstraintLayout>