<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/background_light"
    tools:context=".SearchView">

    <ImageView
        android:id="@+id/topBar"
        android:layout_width="414dp"
        android:layout_height="60dp"
        android:contentDescription="@string/top_bar_content_description"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@color/colorPrimary" />

    <TextView
        android:id="@+id/topBarString"
        android:layout_width="200dp"
        android:layout_height="80dp"
        android:layout_marginStart="107dp"
        android:fontFamily="@font/pt_serif_bold"
        android:text="@string/represent_string"
        android:textAlignment="center"
        android:textColor="@android:color/background_light"
        android:textSize="36sp"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/zipcodeInput"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="240dp"
        android:ems="5"
        android:gravity="center_horizontal"
        android:hint="@string/zipcodeHintString"
        android:inputType="textPostalAddress"
        android:singleLine="true"
        android:textSize="72sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/enterZipcode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="100dp"
        android:text="@string/requestZipcodeString"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/zipcodeInput"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/topBar" />

    <ImageButton
        android:id="@+id/imageButton"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_marginBottom="80dp"
        android:background="@android:color/background_light"
        android:scaleType="fitXY"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        android:onClick="search"
        app:srcCompat="@drawable/loupe" />

</android.support.constraint.ConstraintLayout>